# irish-fbr

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
irish-fbr/: check_website.py
irish_fbr/: check_website.py
tests/: test_check_webpage.py  test_irish-fbr.py  test_irish_fbr.py
