[tool.poetry]
name = "irish_fbr"
version = "0.1.0"
description = "Tiny project to help me determine when Irish Foreign Birth Registry opens (currently closed due to COVID)"
authors = ["Corbin Albert <corbin.albert@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
requests = "^2.24.0"
twilio = "^6.45.0"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
mypy = "^0.782"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
jedi = "^0.17.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
